# phaethon-black

./: .gitignore  .gitmodules  README.md  TODO.md
BLEtest/m5/central/: prj.conf
BLEtest/m5/central/src/: main.c
BLEtest/nrf/peripheral_nus/: prj.conf
BLEtest/nrf/peripheral_nus/src/: main.c
firmware/: CMakeLists.txt  README.md
firmware/apps/base/: CMakeLists.txt  README.md  prj.conf
firmware/apps/base/boards/: nrf52840dk_nrf52840.overlay
firmware/apps/base/src/: base_ble_cmds.c  base_bt.c  base_bt.h  base_gps.c  base_gps.h  dlt_api.c  dlt_api.h  dlt_endpoints.h  dlt_nus_peripheral_link.c  dlt_uart_link.c  main.c  phaethon.proto
firmware/apps/m5core2/: CMakeLists.txt  prj.conf
firmware/apps/m5core2/src/: dlt_endpoints.h  dlt_nus_central_link.c  main.c
firmware/apps/thingy52/: CMakeLists.txt  README.md  prj.conf
firmware/apps/thingy52/boards/: board.c  thingy52_nrf52832.overlay
firmware/apps/thingy52/src/: filter.c  filter.h  wsu_msg_api.c  wsu_msg_api.h
firmware/lib/: CMakeLists.txt  dlt_api.c
mycode/apps/base/: prj.conf
mycode/apps/base/boards/: nrf52840dk_nrf52840.overlay
mycode/apps/base/src/: base_bt.c  main.c
mycode/apps/m5core2/: README.md
mycode/apps/thingy52/: README.md  prj.conf
mycode/apps/thingy52/boards/: board.c  thingy52_nrf52832.overlay
mycode/apps/thingy52/src/: main.c  wsu_beacon.c  wsu_beacon_ext.c  wsu_mpu9250.c  (+1 more)
pi/: README.md  adsb_reader.py  dlt_test.py  phaethon_pb2.py  requirements.txt  rtl_capture.py
pi/dlt/: README.md  __init__.py  dlt.py
pi/tests/: test_dlt.py
shared/: README.md  phaethon.options.in
